--- a/AzureMobileServicesOfflineTests/AzureMobileServicesOfflineTests.csproj
+++ b/AzureMobileServicesOfflineTests/AzureMobileServicesOfflineTests.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AssertExLib">
+      <HintPath>..\packages\AssertEx.1.0.0\lib\net45\AssertExLib.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.Mobile, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\zumosdk\sdk\Managed\src\Microsoft.WindowsAzure.MobileServices.Net45\bin\Debug\Microsoft.WindowsAzure.Mobile.dll</HintPath>
@@ -87,7 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="sqlite3.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
