--- a/AzureMobileServicesOfflineTests/AzureMobileServicesOfflineTests.csproj
+++ b/AzureMobileServicesOfflineTests/AzureMobileServicesOfflineTests.csproj
@@ -74,8 +74,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MobileServiceTableTests.cs" />
+    <Compile Include="EntityTests.cs" />
+    <Compile Include="MappedEntityTests.cs" />
+    <Compile Include="MongoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageTests.cs" />
+    <Compile Include="TestBase.cs" />
+    <Compile Include="TestContext.cs" />
     <Compile Include="Types\MappedEntity.cs" />
     <Compile Include="Types\Mongo.cs" />
     <Compile Include="Types\Entity.cs" />
